fix: fixed X-overflow issue

--- a/src/sass/components/FlashCard/flashcard.scss
+++ b/src/sass/components/FlashCard/flashcard.scss
@@ -26,6 +26,8 @@
 
 	p {
 		overflow: auto;
+		overflow-wrap: break-word;
+		hyphens: auto;
 	}
 }
 
